<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addmembertoclub" />
    
     <TextView
        android:id="@+id/label_clubname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_clubname" />

    <EditText
        android:id="@+id/editText_clubname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
         <TextView
        android:id="@+id/label_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phonenumber" />

    <EditText
        android:id="@+id/editText_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/button_addMemberToClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnlabel_addMemberToClub"
        android:onClick="onAddMemberToClubButtonClicked" />

</LinearLayout>
