<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addclub" />
    
     <TextView
        android:id="@+id/label_clubname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_clubname" />

    <EditText
        android:id="@+id/editText_clubname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    

    <Button
        android:id="@+id/button_addClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnlabel_addClub"
        android:onClick="onAddClubButtonClicked" />

</LinearLayout>
